--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,6 @@
 runtime: python
-entrypoint: gunicorn -b :$PORT application:app
+env: flex
+entrypoint: gunicorn -b :$PORT main:app
 runtime_config:
   python_version: 3
 manual_scaling:
