--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,11 @@
 runtime: python38
+api_version: 1
+threadsafe: true
+
+handlers:
+- url: /.*
+  script: main.app
+
+libraries:
+- name: flask
+  version: 0.12
