--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,6 @@
 runtime: python
-entrypoint: gunicorn -b :$PORT main:app
 env: flex
+entrypoint: gunicorn -b :$PORT main:app
+
+runtime_config:
+  python_version: 3
