--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-Elasticsearch==0.2.5
 Flask-PyMongo==2.3.0
-Flask-SQLAlchemy==2.4.4
+flask-swagger-ui==3.36.0
 gunicorn==19.10.0
 hyperlink==20.0.1
 idna==2.10
@@ -31,9 +31,6 @@ jmespath==0.10.0
 lxml==4.6.1
 MarkupSafe==1.1.1
 mypy-extensions==0.4.3
-mysql==0.0.2
-mysql-connector==2.2.9
-mysqlclient==2.0.1
 nexmo==2.5.2
 parsel==1.6.0
 pathspec==0.8.1
@@ -45,8 +42,6 @@ pycparser==2.20
 PyHamcrest==2.0.2
 PyJWT==1.7.1
 pymongo==3.11.1
-PyMySQL==0.10.1
-PyMysqlDB==0.0.2
 pyOpenSSL==19.1.0
 python-dateutil==2.8.1
 pytz==2020.1
@@ -56,7 +51,6 @@ regex==2020.10.28
 requests==2.24.0
 service-identity==18.1.0
 six==1.15.0
-SQLAlchemy==1.3.20
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
@@ -67,5 +61,4 @@ watson-developer-cloud==2.10.1
 websocket-client==0.48.0
 Werkzeug==1.0.1
 wrapt==1.12.1
-yml==0.0.1
 zope.interface==5.1.2
